# doht

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: get_headers.cmake  get_srcs.cmake  version_tag.cmake
data/: charizard.txt2  shc.txt
include/: hello.h
include/doht/: data_manager.h  hello.h  shc.h
include/doht/shc/: shc.h
src/: data_manager.cpp  hello.cpp  shc.cpp
tests/: CMakeLists.txt  data_manager.test.cpp  hello.test.cpp  shc.test.cpp
tools/: CMakeLists.txt  doth_console.cpp  test_hello.cpp
